# RepoMap-AI

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
npm/: README.md  install.js  package.json
repomap/: __init__.py
repomap/core/: config.py  engine.py  symbol_store.py
repomap/data_models/: detector.py  tracker.py
repomap/formatter/: context.py  json_fmt.py  markdown.py  xml_fmt.py
repomap/graph/: builder.py  models.py  ranker.py  resolver.py
repomap/graph/backends/: networkx_backend.py  scipy_backend.py
repomap/integrations/: cli.py  diff.py  mcp_server.py  watcher.py
repomap/intelligence/: hot_paths.py  llm_enrichment.py  narratives.py
repomap/parser/: base.py  fallback.py  tree_sitter_parser.py
repomap/parser/queries/: c.scm  cpp.scm  go.scm  java.scm  python.scm  ruby.scm  rust.scm  typescript.scm
repomap/visual/: generator.py  template.html
tests/: test_parser.py
