[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repomap-ai"
version = "0.1.3"
description = "Token-efficient repository mapping tool for AI IDEs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "tushar22" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "tree-sitter>=0.25.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "typer>=0.12.0",
    "tiktoken>=0.7.0",
    "networkx>=3.3",
    "rich>=13.0",
    "watchdog>=4.0.0",
    "mcp>=1.0.0",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/tushar22/repomap"
Repository = "https://github.com/tushar22/repomap"
Issues = "https://github.com/tushar22/repomap/issues"

[project.optional-dependencies]
languages = [
    "tree-sitter-go>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-ruby>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
]
scale = [
    "scipy>=1.13.0",
    "numpy>=1.26.0",
    "rustworkx>=0.15.0",
]
visual = [
    "jinja2>=3.1.0",
]
mcp = [
    "mcp>=1.0.0",
]
llm = [
    "httpx>=0.27.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
repomap = "repomap.integrations.cli:app"

[tool.hatch.build.targets.wheel]
include = ["repomap/**/*.py", "repomap/**/*.scm", "repomap/**/*.html"]

[tool.repomap]
max_tokens = 1000
output_format = "markdown"
